--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -6,14 +6,14 @@ sphinx-design
 # Running CLI programs and capture outputs
 sphinxcontrib-programoutput>=0.17
 # Installing all package requirements to be able to load all the modules and run the help.
-vtk >= 9.1
+vtk >= 9.3
 networkx >= 2.4
 tqdm
-numpy
-pandas
-typing_extensions
-matplotlib>=3.9.4
+numpy >= 1.26
+pandas >= 2.2
+typing_extensions >= 4.12
+matplotlib >= 3.9.4
 h5py
-lxml>=4.5.0
+lxml >= 4.5.0
 parameterized
 pyvista
