--- a/geos-posp/pyproject.toml
+++ b/geos-posp/pyproject.toml
@@ -33,14 +33,8 @@ keywords = [
 requires-python = ">= 3.10"
 
 dependencies = [
-    "vtk >= 9.3",
-    "numpy >= 1.26",
-    "pandas >= 2.2",
-    "typing_extensions >= 4.12",
-    "geos-utils @ file:./geos-utils",
     "geos-geomechanics @ file:./geos-geomechanics",
 ]
-
 
 [project.urls]
 Homepage = "https://github.com/GEOS-DEV/geosPythonPackages"
@@ -49,6 +43,9 @@ Repository = "https://github.com/GEOS-DEV/geosPythonPackages.git"
 "Bug Tracker" = "https://github.com/GEOS-DEV/geosPythonPackages/issues"
 
 [project.optional-dependencies]
+build = [
+  "build ~= 1.2"
+]
 dev = [
    "mypy", 
    "yapf",
