--- a/geos-utils/pyproject.toml
+++ b/geos-utils/pyproject.toml
@@ -2,26 +2,42 @@
 requires = ["setuptools>=61.2"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools]
+include-package-data = true
+
+[tool.setuptools.packages.find]
+where = ["src"]
+include = ["geos.utils*"]
+exclude = ['tests*']
+
 [project]
 name = "geos-utils"
 version = "0.1.0"
 description = "geos-utils is a Python package that gathers utilities common to all GEOS python packages."
 authors = [{name = "GEOS Contributors" }]
-maintainers = [ 
-    {name = "Martin Lemay", email = "martin.lemay@external.totalenergies.com"}
-]
+maintainers = [{name = "Martin Lemay", email = "martin.lemay@external.totalenergies.com"}]
 license = {text = "Apache-2.0"}
 classifiers = [
-  "Development Status :: 4 - Beta",
-  "Programming Language :: Python"
+    "Development Status :: 4 - Beta",
+    "Programming Language :: Python",
+    "License :: OSI Approved :: Apache Software License ",
+    "Natural Language :: English",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3 :: Only",
 ]
 
-requires-python = ">=3.9"
+requires-python = ">= 3.10"
 
 dependencies = [
-    "typing_extensions",
-    "numpy",
+    "typing_extensions >= 4.12",
+    "numpy >= 1.26",
 ]
+
+[project.urls]
+Homepage = "https://github.com/GEOS-DEV/geosPythonPackages"
+Documentation = "https://geosx-geosx.readthedocs-hosted.com/projects/geosx-geospythonpackages/en/latest/"
+Repository = "https://github.com/GEOS-DEV/geosPythonPackages.git"
+"Bug Tracker" = "https://github.com/GEOS-DEV/geosPythonPackages/issues"
 
 [project.optional-dependencies]
 build = [
@@ -35,10 +51,6 @@ test = [
     "pytest",
     "pytest-cov"
 ]
-
-
-[project.scripts]
-
 
 [tool.pytest.ini_options]
 addopts = "--import-mode=importlib"
@@ -54,4 +66,3 @@ filterwarnings = []
 [tool.coverage.run]
 branch = true
 source = ["src/geos/utils"]
-
