--- a/geos-geomechanics/pyproject.toml
+++ b/geos-geomechanics/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=61.2"]
+requires = ["setuptools>=61.2", "wheel >= 0.37.1"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
@@ -7,7 +7,7 @@ include-package-data = true
 
 [tool.setuptools.packages.find]
 where = ["src"]
-include = ["geos_geomechanics*"]
+include = ["geos.geomechanics*"]
 exclude = ['tests*']
 
 [project]
@@ -22,11 +22,11 @@ classifiers = [
     "Programming Language :: Python"
 ]
 dependencies=[
+    "geos-utils @ file:./geos-utils",
     "vtk >= 9.3",
-    "numpy >= 1.26",
+    "numpy >= 2.2",
     "pandas >= 2.2",
     "typing_extensions >= 4.12",
-    "geos-utils @ file:./geos-utils",
 ]
 requires-python = ">= 3.10"
 
