refactor: create geos-pv package (#71)
* Create geos-pv package with geosLogReader

* Move PV tools and delete PVPythonViewConfigurator

* set local dependency path management

* update doc

* fix doc

* update project config

* Manage PV plugins dependency

* typing and linting fix

* add .vscode to .gitignore

* linting and formatting

* bug fix and settup geos-pv tests

* fix doc issues

* fix ci geos-geomecanics and linting

* update geos-pv doc

* Add contribution explanations for geos-pv

* Fix doc ci

* Update pyproject and requirements

* Revert "Update pyproject and requirements"

This reverts commit 2c3945529529e647a1d57efa4fd015a04755a849.

* Harmonize dependency versions

* Update installation instructions

---------

Co-authored-by: Martin LEMAY <l1021338@fr-vmx00109.main.glb.corp.local>
Co-authored-by: alexbenedicto <alexandre.benedicto@external.totalenergies.com>

--- a/geos-pv/pyproject.toml
+++ b/geos-pv/pyproject.toml
@@ -2,18 +2,10 @@
 requires = ["setuptools>=61.2", "wheel >= 0.37.1"]
 build-backend = "setuptools.build_meta"
 
-[tool.setuptools]
-include-package-data = true
-
-[tool.setuptools.packages.find]
-where = ["src"]
-include = ["geos.utils*"]
-exclude = ['tests*']
-
 [project]
-name = "geos-utils"
+name = "geos-pv"
 version = "0.1.0"
-description = "geos-utils is a Python package that gathers utilities common to all GEOS python packages."
+description = "geos-pv is a Python package that gathers Paraview plugins and dedicated utils to process and visualize GEOS inputs and outputs."
 authors = [{name = "GEOS Contributors" }]
 maintainers = [{name = "Martin Lemay", email = "martin.lemay@external.totalenergies.com"}]
 license = {text = "Apache-2.0"}
@@ -24,27 +16,11 @@ classifiers = [
 
 requires-python = ">=3.10"
 
-dependencies = [
-    "numpy >= 2.2",
-    "typing_extensions >= 4.12",
-]
+dynamic = ["dependencies"]
 
 [project.optional-dependencies]
-build = [
-  "build ~= 1.2"
-]
-dev = [
-    "mypy",
-    "yapf",
-]
-test = [
-    "pytest",
-    "pytest-cov"
-]
-
-
-[project.scripts]
-
+# dependency to use if install together with paraview
+paraview = ["paraview"]
 
 [tool.pytest.ini_options]
 addopts = "--import-mode=importlib"
@@ -56,8 +32,3 @@ python_functions = "test*"
 testpaths = ["tests"]
 norecursedirs = "bin"
 filterwarnings = []
-
-[tool.coverage.run]
-branch = true
-source = ["src/geos/utils"]
-
