Readded the examples for obl provided by Aleks Novikov + moved all examples outside of src + update docs

--- a/pygeos-tools/pyproject.toml
+++ b/pygeos-tools/pyproject.toml
@@ -5,6 +5,7 @@ build-backend = "setuptools.build_meta"
 [tool.setuptools.packages.find]
 where = ["src"]
 include = ["geos.pygeos_tools*"]
+exclude = ["examples"]
 
 [project]
 name = "pygeos-tools"
