feat:  Python interfaces to geos from Makutu repo (refactoring) (#74)
* Created utils repository and updated every import for mesh_doctor

* Messages correction in io

* All the initial files from the Makutu PR are added for future refactoring

* Refactoring mesh files

* Moved solverutils to utils

* Modified model directory structure + renamed vtkUtils into pyevtk_tools

* Adding acoustic / elastic modeling tools

* Correction exports and module names for pygeos-tools

* Change imports for geos-mesh

* Support processing of included XML files

* Fix to wave prop modeling in p4 and p3. Also fix to allow use of python < 3.9

* Bug fix for io with VtkOutput

* Format update io and GeosxArgs

* Error handling for class methods

* Update XML class

* Update Solver base class with also the use of wrapper file

* Update WaveSolver

* Update AcousticSolver

* bug fix

* Add minTime and maxTime handling

* Update ElasticSolver

* Update ReservoirSolver

* Update GeomechanicsSolver

* Update hinting of variables and methods

* Add examples of scripts to pilot a GEOS simulation through pygeos using the Solver classes

* Add __doc__ at the beginning of scritps

* Moved examples inside utilities

* Change examples folder to solvers-examples

* Moved all files outside of "utilities" folder and remove utilities folder

* Update format of acquisition_library files

* Update format of Trace outputs

* Update pyproject.toml

* Added .rst documentation

* yapf formatting

* yapf formatting + change minimum python version to 3.8

* For pygeos-tools: update documentation, removed geos-utils/pygeos-tools files to be in pygeos-tools, few corrections

* Move geos.utils.vtk to geos.mesh.vtk

* Update geos-mesh tests

* Update docs for pygeos-tools to remove warnings

* Exclude build directory when processing mypy checks + removed ruff checking + typing correction for classes.py

* Bugfix for tests + yapf formatting

* Remove conflict between ruff and mypy checking in classes.py

* Fix bui

--- a/pygeos-tools/pyproject.toml
+++ b/pygeos-tools/pyproject.toml
@@ -1,13 +1,19 @@
 [build-system]
-requires = ["setuptools>=42", "wheel"]
+requires = ["setuptools>=61.2", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+where = ["src"]
+include = ["geos.pygeos_tools*"]
+exclude = ["examples"]
 
 [project]
 name = "pygeos-tools"
-version = "0.1.0"
+version = "0.2.0"
 description = "Tools for interacting with pygeosx"
 maintainers = [
-    {name = "Christopher Sherman", email = "sherman27@llnl.gov" }
+    {name = "Christopher Sherman", email = "sherman27@llnl.gov" },
+    {name = "Alexandre Benedicto", email = "alexandre.benedicto@external.totalenergies.com" }
 ]
 license = {text = "LGPL-2.1"}
 classifiers = [
@@ -15,14 +21,27 @@ classifiers = [
   "Programming Language :: Python"
 ]
 
-requires-python = ">=3.8"
+requires-python = ">= 3.10"
 
 dependencies = [
+    "geos-utils @ file:./geos-utils",
+    "geos-mesh @ file:./geos-mesh",
     "matplotlib",
-    "numpy",
     "scipy",
     "mpi4py",
+    "vtk",
+    "pyevtk",
+    "xmltodict",
+    "h5py",
+    "segyio",
+    "numba",
 ]
+
+[project.urls]
+Homepage = "https://github.com/GEOS-DEV/geosPythonPackages"
+Documentation = "https://geosx-geosx.readthedocs-hosted.com/projects/geosx-geospythonpackages/en/latest/"
+Repository = "https://github.com/GEOS-DEV/geosPythonPackages.git"
+"Bug Tracker" = "https://github.com/GEOS-DEV/geosPythonPackages/issues"
 
 [tool.pytest.ini_options]
 addopts = "--import-mode=importlib"
@@ -38,4 +57,3 @@ filterwarnings = []
 [tool.coverage.run]
 branch = true
 source = ["geos"]
-
