--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -40,19 +40,20 @@ jobs:
       max-parallel: 3
       matrix:
         python-version: ["3.10", "3.11", "3.12"]
+        package-name: 
+          - geos-ats
+          - geos-mesh
+          - geos-posp
+          - geos-timehistory
+          - geos-trame
+          - geos-utils
+          - geos-xml-tools
+          - geos-xml-viewer
+          - hdf5-wrapper
+          - pygeos-tools
         include:
-          - package-name: geos-ats
-          - package-name: geos-mesh
-          - package-name: geos-posp
-          - package-name: geos-timehistory
-          - package-name: geos-trame
-          - package-name: geos-utils
-          - package-name: geos-xml-tools
-          - package-name: geos-xml-viewer
-          - package-name: hdf5-wrapper
           - package-name: pygeos-tools
             dependencies: "geos-utils geos-mesh"
-
     steps:
     - uses: actions/checkout@v4
     - uses: mpi4py/setup-mpi@v1
