--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -40,8 +40,20 @@ jobs:
       max-parallel: 3
       matrix:
         python-version: ["3.10", "3.11", "3.12"]
-        package-name: ["geos-ats", "geos-mesh", "geos-posp", "geos-timehistory", "geos-trame", "geos-utils", "geos-xml-tools", "geos-xml-viewer", "hdf5-wrapper", "pygeos-tools"]
-
+        package-name: 
+          - geos-ats
+          - geos-mesh
+          - geos-posp
+          - geos-timehistory
+          - geos-trame
+          - geos-utils
+          - geos-xml-tools
+          - geos-xml-viewer
+          - hdf5-wrapper
+          - pygeos-tools
+        include:
+          - package-name: pygeos-tools
+            dependencies: "geos-utils geos-mesh"
     steps:
     - uses: actions/checkout@v4
     - uses: mpi4py/setup-mpi@v1
@@ -55,7 +67,19 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install pytest yapf toml
+
+        DEPS="${{ matrix.dependencies || '' }}"  
+
+        if [ -n "$DEPS" ]; then
+        echo "Installing additional dependencies: $DEPS"
+        for dep in $DEPS; do
+          python -m pip install ./$dep
+        done
+        fi
+
+        echo "Installing main package..."
         python -m pip install ./${{ matrix.package-name }}/[test]
+
     - name: Lint with yapf
       # working-directory: ./${{ matrix.package-name }}
       run: |
@@ -66,4 +90,3 @@ jobs:
       # python -m pytest ./${{ matrix.package-name }} --doctest-modules --junitxml=junit/test-results.xml --cov-report=xml --cov-report=html |
       # wrap pytest to avoid error when no tests in the package
         sh -c 'python -m pytest ./${{ matrix.package-name }}; ret=$?; [ $ret = 5 ] && exit 0 || exit $ret'
-         
