add missing dependency

--- a/geos-mesh/pyproject.toml
+++ b/geos-mesh/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "tqdm >= 4.67",
     "numpy >= 2.2",
     "meshio >= 5.3",
+    "typing_extensions >= 4.12",
 ]
 
 [project.scripts]
@@ -47,7 +48,8 @@ build = [
   "build ~= 1.2"
 ]
 dev = [
-   "mypy", 
+   "mypy",
+   "ruff", 
    "yapf",
 ]
 test = [
