--- a/.mypy.ini
+++ b/.mypy.ini
@@ -2,13 +2,13 @@
 python_version = 3.10
 
 # strict = true
-warn_unreachable = true
-implicit_reexport = true
-show_error_codes = true
-show_column_numbers = true
-ignore_missing_imports = true
-warn_unused_configs = true
-allow_redefinition = false
+warn_unreachable = True
+implicit_reexport = True
+show_error_codes = True
+show_column_numbers = True
+ignore_missing_imports = True
+warn_unused_configs = True
+allow_redefinition = False
 
 # ignore files in the tests directory
 [mypy-tests.*]
