--- a/geos-mesh/pyproject.toml
+++ b/geos-mesh/pyproject.toml
@@ -25,12 +25,15 @@ classifiers = [
 requires-python = ">=3.10"
 
 dependencies = [
+    "geos-utils @ file:./geos-utils",
     "vtk >= 9.3",
     "networkx >= 2.4",
     "tqdm >= 4.67",
     "numpy >= 2.2",
+    "pandas >= 2.2",
     "meshio >= 5.3",
     "typing_extensions >= 4.12",
+    "matplotlib >= 3.10"
 ]
 
 [project.scripts]
