refactor: Move VTK utilities from geos-posp to geos-mesh (#75)
* Move vtkUtils and multiblockInspectorTreeFunctions + update dependencies

* Add data for test and modify useless functions

* vtkUtils tests implemented

* Reorganize utilities & update paths accordingly

* Documentation 

---------

Co-authored-by: alexbenedicto <alexandre.benedicto@external.totalenergies.com>

--- a/geos-mesh/pyproject.toml
+++ b/geos-mesh/pyproject.toml
@@ -25,11 +25,12 @@ classifiers = [
 requires-python = ">=3.10"
 
 dependencies = [
-    "vtk >= 9.3",
+    "vtk == 9.3",
     "networkx >= 2.4",
     "tqdm >= 4.67",
     "numpy >= 2.2",
     "meshio >= 5.3",
+    "pandas",
 ]
 
 [project.scripts]
@@ -56,9 +57,16 @@ test = [
 ]
 
 [tool.pytest.ini_options]
-addopts = [
-    "--import-mode=importlib",
-]
-pythonpath = [
-    "src",
-]
+addopts="--import-mode=importlib"
+console_output_style = "count"
+pythonpath = ["src"]
+python_classes = "Test"
+python_files = "test*.py"
+python_functions = "test*"
+testpaths = ["tests"]
+norecursedirs = "bin"
+filterwarnings = []
+
+[tool.coverage.run]
+branch = true
+source = ["src/geos"]
