--- a/geos-mesh/pyproject.toml
+++ b/geos-mesh/pyproject.toml
@@ -29,8 +29,9 @@ dependencies = [
     "networkx >= 2.4",
     "tqdm >= 4.67",
     "numpy >= 2.2",
+    "pandas >= 2.2",
     "meshio >= 5.3",
-    "pandas",
+    "typing_extensions >= 4.12",
 ]
 
 [project.scripts]
@@ -48,7 +49,8 @@ build = [
   "build ~= 1.2"
 ]
 dev = [
-   "mypy", 
+   "mypy",
+   "ruff", 
    "yapf",
 ]
 test = [
@@ -57,7 +59,7 @@ test = [
 ]
 
 [tool.pytest.ini_options]
-addopts="--import-mode=importlib"
+addopts = "--import-mode=importlib"
 console_output_style = "count"
 pythonpath = ["src"]
 python_classes = "Test"
@@ -66,7 +68,3 @@ python_functions = "test*"
 testpaths = ["tests"]
 norecursedirs = "bin"
 filterwarnings = []
-
-[tool.coverage.run]
-branch = true
-source = ["src/geos"]
