--- a/geos-posp/pyproject.toml
+++ b/geos-posp/pyproject.toml
@@ -34,8 +34,8 @@ keywords = [
 requires-python = ">= 3.10"
 
 dependencies = [
-    "geos-geomechanics @ file:./geos-geomechanics",
-    "geos-utils @ file:./geos-utils",
+    "geos-geomechanics",
+    "geos-utils",
     "vtk >= 9.3",
     "numpy >= 2.2",
     "pandas >= 2.2",
