--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -42,6 +42,7 @@ jobs:
         python-version: ["3.10", "3.11", "3.12"]
         package-name: 
           - geos-ats
+          - geos-geomechanics
           - geos-mesh
           - geos-posp
           - geos-timehistory
@@ -52,8 +53,14 @@ jobs:
           - hdf5-wrapper
           - pygeos-tools
         include:
+          - package-name: geos-mesh
+            dependencies: "geos-utils geos-geomechanics"
+          - package-name: geos-posp
+            dependencies: "geos-utils geos-mesh geos-geomechanics"
           - package-name: pygeos-tools
             dependencies: "geos-utils geos-mesh"
+          - package-name: geos-timehistory
+            dependencies: "hdf5-wrapper"
     steps:
     - uses: actions/checkout@v4
     - uses: mpi4py/setup-mpi@v1
