--- a/geos-trame/pyproject.toml
+++ b/geos-trame/pyproject.toml
@@ -56,9 +56,9 @@ build = [
 dev = [
     "pylint",
     "mypy",
-    "black",
-    "isort",
     "mypy",
+    "ruff",
+    "pre-commit"
 ]
 test = [
     "pytest==8.3.3",
@@ -118,18 +118,3 @@ disable = [
     "R0913", # (too-many-arguments)
     "W0105", # (pointless-string-statement)
 ]
-
-[tool.black]
-line-length = 88
-target-version = ['py310']
-include = '\.pyi?$'
-extend-exclude = '''
-src/geos_trame/schema_generated/*.py
-'''
-
-[tool.isort]
-profile = "black"
-src_paths = ["src", "tests"]
-blackArgs = ["--preview"]
-py_version = 310
-
