--- a/geos-trame/pyproject.toml
+++ b/geos-trame/pyproject.toml
@@ -47,6 +47,7 @@ dependencies = [
     "funcy==2.0",
     "typing_inspect==0.9.0",
     "typing_extensions>=4.12",
+    "PyYAML==6.0.1",
 ]
 
 [project.optional-dependencies]
@@ -56,6 +57,7 @@ build = [
 dev = [
     "pylint",
     "mypy",
+    "types-PyYAML",
     "ruff",
     "pre-commit"
 ]
