--- a/.github/workflows/typing-check.yml
+++ b/.github/workflows/typing-check.yml
@@ -30,12 +30,11 @@ jobs:
       # working-directory: ./${{ matrix.package-name }}
       run: |
         python -m pip install --upgrade pip
-        python -m pip install mypy ruff
+        python -m pip install mypy ruff types-PyYAML
 
     - name: Typing check with mypy
       #  working-directory: ./${{ matrix.package-name }}
       run:  |
-        python -m mypy geos-trame/src/geos/trame/app/main.py --install-types --non-interactive
         python -m mypy --config-file ./.mypy.ini --check-untyped-defs ./${{ matrix.package-name }}
 
     - name: Format and linting check with ruff
