--- a/geos-trame/pyproject.toml
+++ b/geos-trame/pyproject.toml
@@ -47,7 +47,7 @@ dependencies = [
     "funcy==2.0",
     "typing_inspect==0.9.0",
     "typing_extensions>=4.12",
-    "PyYAML==6.0.1",
+    "PyYAML",
 ]
 
 [project.optional-dependencies]
