feat: add logic to check user modification in trame-geos (#96)
* feat: add properties checker

* test: add properties checker test

* feat: use simput to check values

* refactor: type checking and split files

* feat: properties checked using geometry data

* refactor: remove src nesting + mypy checks working

* chore: add geos-trame to type checked packages

* chore: remove black/isort and add ruff

* refactor: ruff checks

* docs: remove duplicate CONTRIBUTING and update README

* feat: load data upon check fields

* refactor: add src folder and split geos_trame into geos/trame

* chore: update path

* Add type hints for YAML

---------

Co-authored-by: Jean Fechter <jean.fechter@kitware.com>

--- a/.github/workflows/typing-check.yml
+++ b/.github/workflows/typing-check.yml
@@ -16,7 +16,7 @@ jobs:
       max-parallel: 3
       matrix:
         # add packages to check typing
-        package-name: ["geos-geomechanics", "geos-posp", "geos-timehistory", "geos-utils", "geos-xml-tools", "hdf5-wrapper"]
+        package-name: ["geos-geomechanics", "geos-posp", "geos-timehistory", "geos-utils", "geos-trame", "geos-xml-tools", "hdf5-wrapper"]
 
     steps:
     - uses: actions/checkout@v4
@@ -30,7 +30,7 @@ jobs:
       # working-directory: ./${{ matrix.package-name }}
       run: |
         python -m pip install --upgrade pip
-        python -m pip install mypy ruff
+        python -m pip install mypy ruff types-PyYAML
 
     - name: Typing check with mypy
       #  working-directory: ./${{ matrix.package-name }}
