--- a/geos-mesh/pyproject.toml
+++ b/geos-mesh/pyproject.toml
@@ -32,7 +32,7 @@ dependencies = [
     "pandas >= 2.2",
     "meshio >= 5.3",
     "typing_extensions >= 4.12",
-    "geos-utils @ file:./geos-utils",
+    "geos-utils",
 ]
 
 [project.scripts]
