--- a/geos-xml-tools/pyproject.toml
+++ b/geos-xml-tools/pyproject.toml
@@ -23,10 +23,9 @@ classifiers = [
 requires-python = ">=3.10"
 
 dependencies = [
-    "pyvista >= 0.42",
+    "pyvista>=0.42",
     "lxml>=4.9",
-    "xsdata >= 24",
-    "colorcet >= 3.0.1",
+    "colorcet>=3.0.1",
     "parameterized",
     "numpy>=1.16.2",
     "typing_extensions>=4.12"
@@ -39,14 +38,12 @@ Repository = "https://github.com/GEOS-DEV/geosPythonPackages.git"
 "Bug Tracker" = "https://github.com/GEOS-DEV/geosPythonPackages/issues"
 
 [project.optional-dependencies]
-cli = ["xsdata[cli]>=24"]
 build = [
   "build >= 1.2"
 ]
 dev = [
     "yapf",
-    "mypy",
-    "xmlschema"
+    "mypy"
 ]
 test = [
     "pytest-cov", 
@@ -58,13 +55,7 @@ preprocess_xml = "geos.xml_tools.main:preprocess_serial"
 format_xml = "geos.xml_tools.xml_formatter:main"
 check_xml_attribute_coverage = "geos.xml_tools.attribute_coverage:main"
 check_xml_redundancy = "geos.xml_tools.xml_redundancy_check:main"
-geos-viewer = "geos.xml_tools.viewer.bin.viewer:run"
-geos-exporter = "geos.xml_tools.viewer.bin.exporter:run"
-#validate = "geos.xml_tools.viewer.bin.validate:run"
-#xsd = "geos.xml_tools.viewer.bin.test_xsdata:run"
-geos-modifier = "geos.xml_tools.viewer.bin.modifier:run"
-#testCellLocator = "geos.xml_tools.viewer.bin.testCellLocator:run"
-geos-splitter = "geos.xml_tools.viewer.bin.splitter:run"
+geos-viewer = "geos.xml_tools.viewer:run"
 
 [tool.pytest.ini_options]
 addopts = "--import-mode=importlib"
