--- a/geos-xml-tools/pyproject.toml
+++ b/geos-xml-tools/pyproject.toml
@@ -51,11 +51,13 @@ test = [
 ]
 
 [project.scripts]
-preprocess_xml = "geos.xml_tools.main:preprocess_serial"
+geos-xml-tools = "geos.xml_tools.main:main"
+# Legacy aliases for backward compatibility
+preprocess_xml = "geos.xml_tools.main:main"
 format_xml = "geos.xml_tools.xml_formatter:main"
 check_xml_attribute_coverage = "geos.xml_tools.attribute_coverage:main"
 check_xml_redundancy = "geos.xml_tools.xml_redundancy_check:main"
-geos-viewer = "geos.xml_tools.viewer:run"
+geos-viewer = "geos.xml_tools.pyvista_viewer:run"
 
 [tool.pytest.ini_options]
 addopts = "--import-mode=importlib"
