--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,7 +1,7 @@
-sphinx >= 8.2
+sphinx < 8.2
 sphinx_rtd_theme >= 3.0
 sphinx-argparse >= 0.5
-sphinx-autodoc-typehints >= 3.1
+sphinx-autodoc-typehints < 3.1
 sphinx-design >= 0.6
 # Running CLI programs and capture outputs
 sphinxcontrib-programoutput >= 0.17
@@ -12,7 +12,7 @@ tqdm >= 4.67
 numpy >= 2.2
 pandas >= 2.2
 typing_extensions > 4.12
-matplotlib>=3.9.4
+matplotlib ~= 3.9.0
 h5py >= 3.12
 lxml >= 4.5.0
 parameterized >= 0.9
