--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -136,6 +136,7 @@ jobs:
     - name: Check for GEOS integration test label
       id: check_label
       run: |
+        set -e # Exit immediately if a command exits with a non-zero status.
         echo "Standard CI tests have passed. Now checking for GEOS integration requirements..."
         
         # Check if the PR has the 'test-geos-integration' label
@@ -177,7 +178,6 @@ jobs:
     - name: Get PR information
       id: pr_info
       run: |
-        set -e # Exit immediately if a command exits with a non-zero status.
         echo "Triggering GEOS integration test..."
         pr_json=$(curl -fsSL -H "Accept: application/vnd.github+json" \
                        -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
@@ -210,7 +210,7 @@ jobs:
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/GEOS-DEV/GEOS/actions/workflows/test_geospythonpackages_integration.yml/dispatches \
           -d '{
-            "ref": "develop",
+            "ref": "ci/benedicto/testGeosPythonPackagesIntegration",
             "inputs": {
               "python_package_repo": "${{ steps.pr_info.outputs.pr_repo }}",
               "python_package_branch": "${{ steps.pr_info.outputs.pr_branch }}",
