Make check_geos_integration_label test fail when no label

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -163,6 +163,7 @@ jobs:
           echo "1. Go to your PR page"
           echo "2. Click on 'Labels' in the right sidebar" 
           echo "3. Add the 'test-geos-integration' label"
+          exit 1
         fi
 
   # Step 3: Only trigger GEOS integration if label exists AND standard tests passed
