--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -140,7 +140,8 @@ jobs:
         echo "Standard CI tests have passed. Now checking for GEOS integration requirements..."
         
         # Check if the PR has the 'test-geos-integration' label
-        pr_json=$(curl -H "Accept: application/vnd.github+json" \
+        # -fsS gives Fails on Error (f), Silent on Success (s), Shows Error Message (S)
+        pr_json=$(curl -fsS -H "Accept: application/vnd.github+json" \
                        -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
                        https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.number }})
         
@@ -200,12 +201,13 @@ jobs:
     - name: Trigger GEOS integration test workflow
       id: trigger_workflow
       run: |
+        set -e
         echo "All standard tests passed ✅"
         echo "GEOS integration label found ✅"
         echo "Now triggering GEOS integration test workflow..."
         
         # Trigger the workflow_dispatch event in the GEOS repository
-        response=$(curl -X POST \
+        response=$(curl -fsS -X POST \
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer ${{ secrets.GEOS_INTEGRATION_TOKEN }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
@@ -227,7 +229,7 @@ jobs:
         sleep 10
         
         # Get the latest workflow runs to find our triggered run
-        runs_response=$(curl -H "Accept: application/vnd.github+json" \
+        runs_response=$(curl -fsS -H "Accept: application/vnd.github+json" \
                              -H "Authorization: Bearer ${{ secrets.GEOS_INTEGRATION_TOKEN }}" \
                              https://api.github.com/repos/GEOS-DEV/GEOS/actions/workflows/test_geospythonpackages_integration.yml/runs?per_page=5)
         
